--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
 
     <label class="chip">
       <input id="frameToggle" type="checkbox">
-      枠色（シグナルソングクラス）
+      枠色（シグナルソングA-F ）
     </label>
   </div>
 
@@ -599,7 +599,7 @@
   ]);
 
   // ===== CSV列名（指定）=====
-  let RAW_CLASS_COL  = "D:シグナルソングクラス";
+  let RAW_CLASS_COL  = "D:シグナルソングA-F ";
   let RAW_BIRTH_COL  = "S:生まれ年(00-10)";
   let RAW_HEIGHT_COL = "S:身長(cm)";
 
@@ -645,6 +645,12 @@
       .replaceAll(">","&gt;")
       .replaceAll('"',"&quot;")
       .replaceAll("'","&#39;");
+  }
+
+  // ===== D:/S: を表示から外す（UI用）=====
+  function stripPrefixLabel(key){
+    const s = String(key ?? "").trim();
+    return s.replace(/^[DS]:\s*/i, "");   // "D:" or "S:" だけ間引き
   }
 
   function splitCsvLine(line){
@@ -736,7 +742,7 @@
     }
   }
 
-  // ===== ヘッダーゆらぎ吸収（空白/全角括弧/全角コロン等）=====
+  // ===== ヘッダーゆらぎ吸収 =====
   function normalizeKey(s){
     return String(s ?? "")
       .trim()
@@ -1314,7 +1320,7 @@
 
   function updatePickedSummary(){
     const picked = getPickedKeys(state.show);
-    pickedSummaryEl.textContent = picked.length ? picked.join(" / ") : "未選択";
+    pickedSummaryEl.textContent = picked.length ? picked.map(stripPrefixLabel).join(" / ") : "未選択";
   }
 
   function openDisplayModal(){
@@ -1343,7 +1349,7 @@
       return `
         <label class="chipToggle">
           <input type="checkbox" data-key="${escapeHtml(key)}" ${checked} ${disabled}>
-          ${escapeHtml(key)}
+          ${escapeHtml(stripPrefixLabel(key))}
         </label>
       `;
     }).join("");
@@ -1492,9 +1498,9 @@
     state.header = header;
 
     // 列名確定（ゆらぎ吸収）
-    RAW_CLASS_COL = resolveHeaderKey(header, "D:シグナルソングクラス", [
-      (h)=> normalizeKey(h).includes(normalizeKey("D:シグナルソングクラス")),
-      (h)=> normalizeKey(h).includes("シグナルソングクラス"),
+    RAW_CLASS_COL = resolveHeaderKey(header, "D:シグナルソングA-F ", [
+      (h)=> normalizeKey(h).includes(normalizeKey("D:シグナルソングA-F ")),
+      (h)=> normalizeKey(h).includes("シグナルソングA-F "),
     ]);
     RAW_BIRTH_COL = resolveHeaderKey(header, "S:生まれ年(00-10)", [
       (h)=> normalizeKey(h).startsWith(normalizeKey("S:生まれ年")),
@@ -1507,7 +1513,6 @@
       (h)=> normalizeKey(h).includes("height"),
     ]);
 
-    // ===== ここが修正点：D/Sで役割分離 =====
     // 表示名：D: だけ
     state.displayKeys = header
       .filter(h => h && !EXCLUDE_KEYS.has(h))
@@ -1524,8 +1529,9 @@
     const baseSort = buildSortKeys(header);
     state.sortKeys = baseSort.filter(h => isSKey(h) || h === "Name" || h === "名前");
 
+    // 表示は D:/S: を間引いて見せる（valueは元キーのまま）
     sortKeyEl.innerHTML = state.sortKeys.map(k =>
-      `<option value="${escapeHtml(k)}">${escapeHtml(k)}</option>`
+      `<option value="${escapeHtml(k)}">${escapeHtml(stripPrefixLabel(k))}</option>`
     ).join("");
 
     if (state.sortKeys.includes("Name")) sortKeyEl.value = "Name";
